--- a/src/Club/FeedbackBundle/Resources/translations/messages.da.xlf
+++ b/src/Club/FeedbackBundle/Resources/translations/messages.da.xlf
@@ -1,15 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file source-language="da" datatype="plaintext" original="file.ext">
     <body>
-      <trans-unit id="1">
-        <source>Feedback</source>
-        <target>__Feedback</target>
-      </trans-unit>
+      <trans-unit id="1" approved="yes">
+        <source>Feedback</source> <target state="translated">Feedback</target> </trans-unit>
       <trans-unit id="2">
-        <source>All messages in this form will go back to the developers of the system, so feel free to give any feedback that could help improve the system.</source>
-        <target>__All messages in this form will go back to the developers of the system, so feel free to give any feedback that could help improve the system.</target>
-      </trans-unit>
+        <source>All messages in this form will go back to the developers of the system, so feel free to give any feedback that could help improve the system.</source> <target state="needs-translation">Alle beskeder fra denne formular vil gå tilbage til udviklerne af systemet. Du er meget velkommen til at komme med alt ris og ros, det vil altsammen hjælpe med at forbedre systemet.</target> </trans-unit>
     </body>
   </file>
 </xliff>
