--- a/src/Club/MailBundle/Resources/translations/messages.da.xlf
+++ b/src/Club/MailBundle/Resources/translations/messages.da.xlf
@@ -1,47 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file source-language="da" datatype="plaintext" original="file.ext">
     <body>
       <trans-unit id="1">
-        <source>Mail</source>
-        <target>__Mail</target>
-      </trans-unit>
+        <source>Mail</source> <target state="needs-translation">Mail</target> </trans-unit>
       <trans-unit id="2">
-        <source>Mail Log</source>
-        <target>__Mail Log</target>
-      </trans-unit>
+        <source>Mail Log</source> <target state="needs-translation">Mail Log</target> </trans-unit>
       <trans-unit id="3">
-        <source>Id</source>
-        <target>__Id</target>
-      </trans-unit>
+        <source>Id</source> <target state="needs-translation">Id</target> </trans-unit>
       <trans-unit id="4">
-        <source>Recipient</source>
-        <target>__Recipient</target>
-      </trans-unit>
+        <source>Recipient</source> <target state="needs-translation">Modtager</target> </trans-unit>
       <trans-unit id="5">
-        <source>Error</source>
-        <target>__Error</target>
-      </trans-unit>
+        <source>Error</source> <target state="needs-translation">Fejl</target> </trans-unit>
       <trans-unit id="6">
-        <source>Created at</source>
-        <target>__Created at</target>
-      </trans-unit>
+        <source>Created at</source> <target state="needs-translation">Oprettet den</target> </trans-unit>
       <trans-unit id="7">
-        <source>Action</source>
-        <target>__Action</target>
-      </trans-unit>
+        <source>Action</source> <target state="needs-translation">Handling</target> </trans-unit>
       <trans-unit id="8">
-        <source>There are no logs.</source>
-        <target>__There are no logs.</target>
-      </trans-unit>
+        <source>There are no logs.</source> <target state="needs-translation">Der er ingen logs.</target> </trans-unit>
       <trans-unit id="9">
-        <source>Created at: %date%</source>
-        <target>__Created at: %date%</target>
-      </trans-unit>
+        <source>Created at: %date%</source> <target state="needs-translation">Oprettet den: %date%</target> </trans-unit>
       <trans-unit id="10">
-        <source>Message</source>
-        <target>__Message</target>
-      </trans-unit>
+        <source>Message</source> <target state="needs-translation">Besked</target> </trans-unit>
     </body>
   </file>
 </xliff>
