--- a/src/Club/RankingBundle/Resources/translations/messages.da.xlf
+++ b/src/Club/RankingBundle/Resources/translations/messages.da.xlf
@@ -1,155 +1,81 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file source-language="da" datatype="plaintext" original="file.ext">
     <body>
       <trans-unit id="1">
-        <source>Ranking, %name%</source>
-        <target>__Ranking, %name%</target>
-      </trans-unit>
+        <source>Ranking, %name%</source> <target state="needs-translation">Rangliste, %name%</target> </trans-unit>
       <trans-unit id="2">
-        <source>When you have played in this ranking, insert the match result in order to update the ranking list.</source>
-        <target>__When you have played in this ranking, insert the match result in order to update the ranking list.</target>
-      </trans-unit>
+        <source>When you have played in this ranking, insert the match result in order to update the ranking list.</source> <target state="needs-translation">Når du har spillet i denne rangliste, indsæt kamp resultatet for at opdatere ranglisten.</target> </trans-unit>
       <trans-unit id="3">
-        <source>Ranking</source>
-        <target>__Ranking</target>
-      </trans-unit>
+        <source>Ranking</source> <target state="needs-translation">Rangering</target> </trans-unit>
       <trans-unit id="4">
-        <source>Create rule</source>
-        <target>__Create rule</target>
-      </trans-unit>
+        <source>Create rule</source> <target state="needs-translation">Opret regl</target> </trans-unit>
       <trans-unit id="5">
-        <source>Name</source>
-        <target>__Name</target>
-      </trans-unit>
+        <source>Name</source> <target state="needs-translation">Navn</target> </trans-unit>
       <trans-unit id="6">
-        <source>Point won</source>
-        <target>__Point won</target>
-      </trans-unit>
+        <source>Point won</source> <target state="needs-translation">Point vundet</target> </trans-unit>
       <trans-unit id="7">
-        <source>Point lost</source>
-        <target>__Point lost</target>
-      </trans-unit>
+        <source>Point lost</source> <target state="needs-translation">Point tabt</target> </trans-unit>
       <trans-unit id="8">
-        <source>Same player</source>
-        <target>__Same player</target>
-      </trans-unit>
+        <source>Same player</source> <target state="needs-translation">Samme spiller</target> </trans-unit>
       <trans-unit id="9">
-        <source>Created at</source>
-        <target>__Created at</target>
-      </trans-unit>
+        <source>Created at</source> <target state="needs-translation">Oprettet den</target> </trans-unit>
       <trans-unit id="10">
-        <source>Action</source>
-        <target>__Action</target>
-      </trans-unit>
+        <source>Action</source> <target state="needs-translation">Handling</target> </trans-unit>
       <trans-unit id="11">
-        <source>There are no rules.</source>
-        <target>__There are no rules.</target>
-      </trans-unit>
+        <source>There are no rules.</source> <target state="needs-translation">Der er ingen regler.</target> </trans-unit>
       <trans-unit id="12">
-        <source>Insert match</source>
-        <target>__Insert match</target>
-      </trans-unit>
+        <source>Insert match</source> <target state="needs-translation">Indsæt kamp</target> </trans-unit>
       <trans-unit id="13">
-        <source>There are no rankings.</source>
-        <target>__There are no rankings.</target>
-      </trans-unit>
+        <source>There are no rankings.</source> <target state="needs-translation">Der er ingen ranglister.</target> </trans-unit>
       <trans-unit id="14">
-        <source>Ranking info</source>
-        <target>__Ranking info</target>
-      </trans-unit>
+        <source>Ranking info</source> <target state="needs-translation">Rangliste info</target> </trans-unit>
       <trans-unit id="15">
-        <source>Period</source>
-        <target>__Period</target>
-      </trans-unit>
+        <source>Period</source> <target state="needs-translation">Periode</target> </trans-unit>
       <trans-unit id="16">
-        <source>Ranking type</source>
-        <target>__Ranking type</target>
-      </trans-unit>
+        <source>Ranking type</source> <target state="needs-translation">Rangliste type</target> </trans-unit>
       <trans-unit id="17">
-        <source>Invite only</source>
-        <target>__Invite only</target>
-      </trans-unit>
-      <trans-unit id="18">
-        <source>Open for all</source>
-        <target>__Open for all</target>
-      </trans-unit>
+        <source>Invite only</source> <target state="needs-translation">Inviter kun</target> </trans-unit>
+      <trans-unit id="18" approved="yes">
+        <source>Open for all</source> <target state="translated">Åben for alle</target> </trans-unit>
       <trans-unit id="19">
-        <source>Sets per match</source>
-        <target>__Sets per match</target>
-      </trans-unit>
+        <source>Sets per match</source> <target state="needs-translation">Sæt per kamp</target> </trans-unit>
       <trans-unit id="20">
-        <source>Point for victory</source>
-        <target>__Point for victory</target>
-      </trans-unit>
+        <source>Point for victory</source> <target state="needs-translation">Point for sejr</target> </trans-unit>
       <trans-unit id="21">
-        <source>Point for defeat</source>
-        <target>__Point for defeat</target>
-      </trans-unit>
-      <trans-unit id="22">
-        <source>Matches with same opponent</source>
-        <target>__Matches with same opponent</target>
-      </trans-unit>
+        <source>Point for defeat</source> <target state="needs-translation">Point for nederlag</target> </trans-unit>
+      <trans-unit id="22" approved="yes">
+        <source>Matches with same opponent</source> <target state="translated">Kampe med samme modstander</target> </trans-unit>
       <trans-unit id="23">
-        <source>Rank</source>
-        <target>__Rank</target>
-      </trans-unit>
+        <source>Rank</source> <target state="needs-translation">Rank</target> </trans-unit>
       <trans-unit id="24">
-        <source>Team</source>
-        <target>__Team</target>
-      </trans-unit>
+        <source>Team</source> <target state="needs-translation">Hold</target> </trans-unit>
       <trans-unit id="25">
-        <source>Played</source>
-        <target>__Played</target>
-      </trans-unit>
+        <source>Played</source> <target state="needs-translation">Spillet</target> </trans-unit>
       <trans-unit id="26">
-        <source>Won</source>
-        <target>__Won</target>
-      </trans-unit>
+        <source>Won</source> <target state="needs-translation">Vundet</target> </trans-unit>
       <trans-unit id="27">
-        <source>Lost</source>
-        <target>__Lost</target>
-      </trans-unit>
+        <source>Lost</source> <target state="needs-translation">Tabt</target> </trans-unit>
       <trans-unit id="28">
-        <source>Won %</source>
-        <target>__Won %</target>
-      </trans-unit>
+        <source>Won %</source> <target state="needs-translation">Vundet %</target> </trans-unit>
       <trans-unit id="29">
-        <source>Point</source>
-        <target>__Point</target>
-      </trans-unit>
+        <source>Point</source> <target state="needs-translation">Point</target> </trans-unit>
       <trans-unit id="30">
-        <source>No teams in the league.</source>
-        <target>__No teams in the league.</target>
-      </trans-unit>
+        <source>No teams in the league.</source> <target state="needs-translation">Ingen hold i denne liga.</target> </trans-unit>
       <trans-unit id="31">
-        <source>Back to ranking</source>
-        <target>__Back to ranking</target>
-      </trans-unit>
+        <source>Back to ranking</source> <target state="needs-translation">Tilbage til rangliste</target> </trans-unit>
       <trans-unit id="32">
-        <source>Add players to ranking</source>
-        <target>__Add players to ranking</target>
-      </trans-unit>
+        <source>Add players to ranking</source> <target state="needs-translation">Tilføj spiller til rangliste</target> </trans-unit>
       <trans-unit id="33">
-        <source>Add player</source>
-        <target>__Add player</target>
-      </trans-unit>
+        <source>Add player</source> <target state="needs-translation">Tilføj spiller</target> </trans-unit>
       <trans-unit id="34">
-        <source>Here you can add players for this tournament.</source>
-        <target>__Here you can add players for this tournament.</target>
-      </trans-unit>
+        <source>Here you can add players for this tournament.</source> <target state="needs-translation">Her kan du tilføje spillere til denne turnering.</target> </trans-unit>
       <trans-unit id="35">
-        <source>Number</source>
-        <target>__Number</target>
-      </trans-unit>
+        <source>Number</source> <target state="needs-translation">Nummer</target> </trans-unit>
       <trans-unit id="36">
-        <source>There are no users in the ranking.</source>
-        <target>__There are no users in the ranking.</target>
-      </trans-unit>
+        <source>There are no users in the ranking.</source> <target state="needs-translation">Der er ingen brugere i denne rangliste.</target> </trans-unit>
       <trans-unit id="37">
-        <source>Create ranking</source>
-        <target>__Create ranking</target>
-      </trans-unit>
+        <source>Create ranking</source> <target state="needs-translation">Opret rangliste</target> </trans-unit>
     </body>
   </file>
 </xliff>
